--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,6 @@ h1 {
     text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
-.h1 {
-    display: flex;
-    flex-wrap: wrap;
-    color: #530505;
-    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
-}
-
 h2 {
     color: #630300;
     padding-bottom: 30px;
@@ -70,10 +63,19 @@ h4 {
 
 .dym_ayc {
     background-color: #665858;
+    max-width: 100%;
 }
 
 .mesa {
     background-color: #665858;
+}
+
+/* ESTILO EXTEND */
+.h1 {
+    display: flex;
+    flex-wrap: wrap;
+    color: #530505;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
 header .navbar {
@@ -239,9 +241,6 @@ header .container-fluid .menu {
 }
 
 /*ESTILOS DESAYUNOS*/
-
-/*MIXIN FLEX DESAYUNO*/
-
 .main_des .wrap-title-section {
     text-align: center;
     font-size: 25px;
@@ -252,7 +251,8 @@ header .container-fluid .menu {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.main_des .wrap_column-2_carta {
+/*MIXIN FLEX DESAYUNO*/
+.wrap_column-2_carta {
     display: flex;
     align-items: center;
     text-align: center;
@@ -262,7 +262,7 @@ header .container-fluid .menu {
     row-gap: 5px;
 }
 
-.main_des .wrap_column-2_carta .plato-carta .title-plato-carta {
+.wrap_column-2_carta .plato-carta .title-plato-carta {
     display: grid;
     flex-direction: column;
     align-items: center;
@@ -272,7 +272,7 @@ header .container-fluid .menu {
     height: 150px;
 }
 
-.main_des .wrap_column-2_carta .plato-carta {
+.wrap_column-2_carta .plato-carta {
     font-family: "PT Serif", serif;
     font-weight: bold;
     font-size: 12px;
@@ -285,21 +285,21 @@ header .container-fluid .menu {
     box-shadow: 13px 8px 27px 0px rgba(0, 0, 0, 0.75);
 }
 
-.main_des .wrap_column-2_carta .plato-carta img {
+.wrap_column-2_carta .plato-carta img {
     width: 100%;
     height: 250px;
 }
 
-.main_des .wrap_column-2_carta .plato-carta .title-plato-carta {
+.wrap_column-2_carta .plato-carta .title-plato-carta {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     font-size: 17px;
 }
 
-.main_des .wrap_column-2_carta .plato-carta .p_button2 {
+.wrap_column-2_carta .plato-carta .p_button2 {
     text-align: center;
 }
 
-.main_des .wrap_column-2_carta .plato-carta .p_button2 button {
+.wrap_column-2_carta .plato-carta .p_button2 button {
     color: #853d3d;
     background-color: #442c2b;
     cursor: pointer;
@@ -312,7 +312,7 @@ header .container-fluid .menu {
     text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
-.main_des .wrap_column-2_carta .plato-carta .p_button2 button:hover {
+.wrap_column-2_carta .plato-carta .p_button2 button:hover {
     background-color: #111010;
 }
 
