--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -68,10 +68,12 @@ h4{
 }
 
 .dym_ayc{
-    background-color: #665858 ;
+    background-color: #010a03b2 ;
     max-width: 100%;
 }
 
 .mesa{
-    background-color: #665858 ;
+    background-color: #010a03b2 ;
 }
+
+// #665858 
