cambios en el fondo de dym_alm

--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -68,12 +68,17 @@ h4{
 }
 
 .dym_ayc{
-    background-color: #010a03b2 ;
+    background-color: #535252 ;
     max-width: 100%;
 }
 
 .mesa{
-    background-color: #010a03b2 ;
+    background-color: #535252 ;
+}
+
+.contact{
+    color: #a39999a2;
+    font-size: 45px;
 }
 
 // #665858 
