--- a/css/main.css
+++ b/css/main.css
@@ -63,12 +63,17 @@ h4 {
 }
 
 .dym_ayc {
-  background-color: rgba(1, 10, 3, 0.6980392157);
+  background-color: #535252;
   max-width: 100%;
 }
 
 .mesa {
-  background-color: rgba(1, 10, 3, 0.6980392157);
+  background-color: #535252;
+}
+
+.contact {
+  color: rgba(163, 153, 153, 0.6352941176);
+  font-size: 45px;
 }
 
 .h1 {
