--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ h4 {
 }
 
 .menu-icon {
-  background-image: url(/imgs/menu-hamburguesa.png);
+  background-image: url(/imgs/menu-hamburguesa.jpg);
 }
 
 .menu-button {
