--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -29,7 +29,10 @@ h1{
     // flex-wrap: wrap;
     // color: #530505;
     // text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+}
 
+.h1{
+    padding: 20px;
 }
 
 h2{
@@ -61,10 +64,12 @@ h4{
 
 .red-text {
     color: #630300;
+
 }
 
 .white-text {
     color:  #a39999;
+
 }
 
 .menu-icon{
