--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -5,7 +5,8 @@ body {
 }
 
 .pick_wine{
-    background-image: url(/imgs/contactanos_red.jpg);
+    background-image: url(//imgs/contactanos_red.jpg);
+    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
 }
