--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .pick_wine {
-  background-image: url(/imgs/contactanos_red.jpg);
+  background-image: url(./../../imgs/contactanos_red.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
