imgs de fondo, arreglo

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .pick_wine {
-  background-image: url(/./imgs/contactanos_red.jpg);
+  background-image: url(../imgs/contactanos_red.jpg);
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -33,7 +33,7 @@ h1 {
 
 /*UTILIZACION DE EXTEND*/
 .h1 {
-  padding: 20px;
+  padding: 10px;
 }
 
 h2 {
@@ -46,7 +46,7 @@ h2 {
 
 h3 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: #6b0000;
+  color: rgba(110, 2, 2, 0.9647058824);
 }
 
 .h3 {
@@ -126,7 +126,7 @@ header .container-fluid .menu {
 /*ESTILOS MAIN INDEX*/
 .main_index .momentos {
   font-size: 50px;
-  color: #d3caca;
+  color: #b4acac;
   text-align: center;
   margin-top: 0px;
   padding: 10px;
