--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -4,7 +4,7 @@
 .main_index {
     .momentos{
         font-size: 50px;
-        color: #d3caca;
+        color: #b4acac;
         text-align: center;
         margin-top: 0px;
         padding: 10px;
