--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .pick_wine{
-    background-image: url(/./imgs/contactanos_red.jpg);
+    background-image: url(../imgs/contactanos_red.jpg);
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -34,7 +34,7 @@ h1{
 }
 
 .h1{
-    padding: 20px;
+    padding: 10px;
 }
 
 h2{
@@ -48,8 +48,7 @@ h2{
 
 h3{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #6b0000;
-    
+    color: #6e0202f6;
 }
 
 .h3{
