--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ h4 {
 }
 
 .menu-icon {
-  background-image: url(/imgs/menu-hamburguesa.jpg);
+  background-image: url(../imgs/menu-hamburguesa.jpg);
 }
 
 .menu-button {
