--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -74,7 +74,7 @@ h4{
 }
 
 .menu-icon{
-    background-image: url(/imgs/menu-hamburguesa.jpg);
+    background-image: url(../imgs/menu-hamburguesa.jpg);
 }
 
 .menu-button{
