--- a/scss/pages/_main-almuerzo.scss
+++ b/scss/pages/_main-almuerzo.scss
@@ -2,6 +2,9 @@
 /*ESTILOS MAIN ALMUERZO*/
 
 .main_alm{
+    .font_alm{
+        font-size: 49px;
+    }
     .wrap-title-section1{
         text-align: center;
         font-size: 25px;
