--- a/scss/utilidades/_media-querys.scss
+++ b/scss/utilidades/_media-querys.scss
@@ -19,6 +19,9 @@
             grid-template-columns: 1fr;
             gap: 1rem;
         }
+        .font_alm{
+            font-size: 40px;
+        }
     }
 }
 
