--- a/scss/utilidades/_media-querys.scss
+++ b/scss/utilidades/_media-querys.scss
@@ -20,7 +20,7 @@
             gap: 1rem;
         }
         .font_alm{
-            font-size: 40px;
+            font-size: 2.5rem;
         }
     }
 }
@@ -42,7 +42,9 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 1rem;
-    
+        }
+        .font_des{
+            font-size: 2.5rem;
         }
     }
 }
