--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -32,27 +32,16 @@
             margin-top: 0px;
             padding: 20px;
         }
-        .ubi{
-            color: #6e0202ec;
-            background-color: #e0d5d53d;
+        .text_rd{
+            color: #440000;
+            background-color: #e0d5d550;
             display: inline-block;
+            text-align: center;
+            justify-content: center;
+            width: 50%;
+
         }
-        .maps{
-            margin-top: 25px;
-            margin-bottom: 100px;
-            position: relative;
-            overflow: hidden;
     }
-    .overlay{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-    .mapa-container:hover {
-        opacity: 1;
+;
 
 
-}
-}
