--- a/scss/utilidades/_media-querys.scss
+++ b/scss/utilidades/_media-querys.scss
@@ -56,4 +56,15 @@
             justify-content: center;
         }
     }
+    .contain_horarios {
+        padding: 15px; 
+    }
+
+    .hijo2_horarios {
+        font-size: 1.2rem; 
+    }
+
+    .horarios {
+        font-size: 1rem; 
+    }
 }
