--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -1,47 +1,75 @@
 
 /*ESTILOS MAIN INDEX*/
 
-.main_index {
-    .momentos{
-        font-size: 50px;
-        color: #b4acac;
-        text-align: center;
-        margin-top: 0px;
-        padding: 10px;
-    }
-    .content-home{
-        text-align: center;
-    }
-        .botones{
-            color: #a39999;
-            text-align: center;
-            margin-bottom: 10px;
-            text-decoration: none;
-            padding: 2px;
-            margin: 2px;
-        
-            img{
-                width: 20%;
-                border-radius: 22px;
-            }
-        }
-        .momentos_2{
-            font-size: 50px;
-            color: #b4acac;
-            text-align: center;
-            margin-top: 0px;
-            padding: 20px;
-        }
-        .text_rd{
-            color: #440000;
-            background-color: #e0d5d550;
-            display: inline-block;
-            text-align: center;
-            justify-content: center;
-            width: 50%;
+.main_index .momentos {
+    font-size: 50px;
+    color: #b4acac;
+    text-align: center;
+    margin-top: 0px;
+    padding: 10px;
+}
 
-        }
-    }
-;
+.main_index .content-home {
+    text-align: center;
+}
+
+.main_index .botones {
+    color: #a39999;
+    text-align: center;
+    margin-bottom: 10px;
+    text-decoration: none;
+    padding: 2px;
+    margin: 2px;
+}
+.main_index .botones img {
+    width: 20%;
+    border-radius: 22px;
+}
+
+.main_index .contain_horarios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 40px;
+}
+
+
+.main_index .hijo1_horarios{
+    text-align: center;
+    justify-content: center;
+    background-color: rgba(184, 148, 148, 0.788);
+    padding: 20px;
+    border-radius: 30px 5px;
+    transition: background-color 0.3s ease;
+}
+
+.hijo1_horarios:hover{
+    background-color: #9c9696de;
+}
+
+.main_index .hijo2_horarios{
+
+    color: #380000;
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.main_index .horarios{
+    color: #520000;
+    font-weight: 700;
+}
+
+
+// .contain_horarios {
+//     background-color: #f5f5f5; /* Color de fondo base */
+//     transition: background-color 0.3s ease; /* Transición en el color de fondo */
+// }
+
+// .contain_horarios:hover {
+//     background-color: #ccc; /* Nuevo color de fondo al pasar el cursor */
+// }
 
 
