--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -18,7 +18,7 @@
     text-align: center;
     margin-bottom: 10px;
     text-decoration: none;
-    padding: 2px;
+    padding: 4px;
     margin: 2px;
 }
 .main_index .botones img {
@@ -43,6 +43,7 @@
     padding: 20px;
     border-radius: 30px 5px;
     transition: background-color 0.3s ease;
+    border: 2px solid rgb(80, 0, 0);
 }
 
 .hijo1_horarios:hover{
