--- a/scss/pages/_main-almuerzo.scss
+++ b/scss/pages/_main-almuerzo.scss
@@ -4,6 +4,7 @@
 .main_alm{
     .font_alm{
         font-size: 49px;
+        border-radius: 10px 14px;
     }
     .wrap-title-section1{
         text-align: center;
@@ -54,9 +55,12 @@
             }
             .p_button2{
                 text-align: center;
+                
+                
                 button{
                     color: #853d3d;
                     background-color:#442c2b;
+                    transition: background-color 0.3s ease;                   
                     cursor: pointer;
                     text-align: center;
                     margin-bottom: 25px;
@@ -66,7 +70,8 @@
                     border: none;
                     text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
                     &:hover{
-                        background-color: #111010;
+                        background-color: #0f0c0cec;
+                        
                     }
                 }
             }        
@@ -88,7 +93,7 @@
             text-align: center;
             button{
                 color: #853d3d;
-                background-color:#442c2b;
+                background-color:#442c2b;               
                 cursor: pointer;
                 text-align: center;
                 margin-bottom: 25px;
