--- a/scss/pages/_main-desayuno.scss
+++ b/scss/pages/_main-desayuno.scss
@@ -50,6 +50,7 @@
                 button{
                     color: #853d3d;
                     background-color:#442c2b;
+                    transition: background-color 0.3s ease;    
                     cursor: pointer;
                     text-align: center;
                     margin-bottom: 25px;
