paleta de colores

--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -85,7 +85,7 @@ h4{
     box-shadow: none;
 }
 .dym_ayc{
-    background-color: #535252 ;
+    background-color: #251d1d ;
     max-width: 100%;
 }
 
