--- a/scss/utilidades/_globales.scss
+++ b/scss/utilidades/_globales.scss
@@ -85,7 +85,7 @@ h4{
     box-shadow: none;
 }
 .dym_ayc{
-    background-color: #251d1d ;
+    background-color: #535252 ;
     max-width: 100%;
 }
 
@@ -97,5 +97,3 @@ h4{
     color: #a39999a2;
     font-size: 45px;
 }
-
-// #665858 
