--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ h4 {
 }
 
 .dym_ayc {
-  background-color: #535252;
+  background-color: #808f80;
   max-width: 100%;
 }
 
@@ -105,6 +105,7 @@ header .navbar {
   display: flex;
   flex-wrap: wrap;
   font-size: 20px;
+  font-weight: 700;
 }
 header .container-fluid .logo {
   border-radius: 15px;
