--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,14 @@ body {
   font-family: "Inconsolata", monospace;
   background-size: cover;
 }
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
 
 .pick_wine {
-  background-image: url(https://files.oaiusercontent.com/file-FcTvqf7RojNfUNjr1QY85u?se=2024-11-29T14%3A51%3A08Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Df84ef886-ee7a-48d7-a9f6-b254b07a2001.webp&sig=YL/QH7hILyJ/F8AIdY4piYDRmSWMMKIY1TJI073GXb0%3D);
+  background-image: url(./../imgs/red_wine6.webp);
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -58,14 +63,22 @@ h3 {
 h4 {
   color: #a39999;
   font-size: 23px;
+
 }
 
 .red-text {
-  color: #630300;
+  color: #e2120a;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+
 }
 
 .white-text {
   color: #a39999;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .menu-icon {
@@ -86,8 +99,9 @@ h4 {
 }
 
 .mesa {
-  background-image: url(https://files.oaiusercontent.com/file-FcTvqf7RojNfUNjr1QY85u?se=2024-11-29T14%3A51%3A08Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Df84ef886-ee7a-48d7-a9f6-b254b07a2001.webp&sig=YL/QH7hILyJ/F8AIdY4piYDRmSWMMKIY1TJI073GXb0%3D);
+  background-image: url(./../imgs/red_wine6.webp);
 }
+
 
 .contact {
   color: rgba(163, 153, 153, 0.6352941176);
@@ -97,8 +111,8 @@ h4 {
 .h1 {
   display: flex;
   flex-wrap: wrap;
-  color: #beb7b7;
-  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+  color: #a5a5a5;
+  text-shadow: 3px 3px 4px rgb(88, 0, 0);
 }
 
 header .navbar {
@@ -372,10 +386,15 @@ header .container-fluid .menu {
   align-items: center;
 }
 .main_contacto .form-section .msj {
-  font-size: 20px;
+  font-size: 25px;
   text-align: center;
   padding: 7px;
+  text-shadow: 3px 3px 4px rgb(88, 0, 0);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
+
+
 .main_contacto .form-section .formulario .input-form {
   margin-bottom: 15px;
 }
@@ -449,8 +468,8 @@ header .container-fluid .menu {
   background-color: #5f1510;
 }
 .main_reserva .wps {
-  color: #beb7b7;
-  margin: 30px;
+  color: #727272;
+  padding: 25px;
   font-size: 30px;
   font-weight: 600;
   font-family: 'Courier New', Courier, monospace;
