--- a/css/main.css
+++ b/css/main.css
@@ -557,16 +557,30 @@ header .container-fluid .menu {
     gap: 1rem;
   }
 }
+
 @media screen and (max-width: 768px) {
   .main_alm .wrap_column-1_carta {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
   }
+  .plato-carta1{
+    height: 360px;
+    width: 160px;
+    font-family:'PT Serif', serif;
+    overflow: hidden;
+    box-shadow: 13px 8px 27px 0px rgba(0,0,0,0.75);
+  }
+  .plato-carta1 img{
+    width: 100%;
+    height: 100px;
+  }
   .main_alm .font_alm {
     font-size: 2.5rem;
   }
 }
+
+
 
 
 @media screen and (max-width: 1024px) {
